@@ -1,6 +1,7 @@
 0.96	ADDED - TEMPLATE allows a node or link to copy it's settings from another, instead of from DEFAULT.
 	ADDED - RRD datasource can take SET rrd_default_path to make configs a little easier to read.
 	ADDED - RRD datasource can take SET rrd_default_in_ds and rrd_default_out_ds for non-Cacti users.
+	ADDED - RRD datasource can get Cacti query information (in poller_output mode ONLY) - like ifAlias, ifSpeed etc
 	ADDED - SNMP datasource also stores the raw data from the SNMP agent in snmp_raw_in/snmp_raw_out
 	ADDED - SNMP datasource allows '-' as an OID, similar to '-' targets in RRDs.
 	ADDED - Control the drawing order with ZORDER.
